# vizarr

./: .gitattributes  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  README.md  biome.json  blosc-5eba38ca.js  blosc-5eba38ca.js.map  blosc-C330gNv4.js  blosc-C330gNv4.js.map  blosc-CAH7LpMT.js  blosc-CAH7LpMT.js.map  blosc-D1KbE3xh.js  blosc-D1KbE3xh.js.map  blosc.0f249b18.js  blosc.4ec40f1c.js  browser-B9yL0Ehp.js  browser-B9yL0Ehp.js.map  browser-BeA5E5X3.js  browser-BeA5E5X3.js.map  chunk-INHXZS53-BwBC_UMW.js  chunk-INHXZS53-BwBC_UMW.js.map  chunk-INHXZS53-CzTQpFx5.js  chunk-INHXZS53-CzTQpFx5.js.map  components.json  deflate-0dafff8a.js  deflate-1e6e72f2.js  deflate-1e6e72f2.js.map  deflate-295166c3.js  deflate-295166c3.js.map  deflate-2de3e030.js  deflate-3CSBuetk.js  deflate-3CSBuetk.js.map  deflate-3f633191.js  deflate-6ae45faf.js  deflate-6ae45faf.js.map  deflate-970b2c24.js  deflate-B0HyNwzO.js  deflate-B0HyNwzO.js.map  (+1092 more)
__snowpack__/: env.js
__tests__/: fixtures.json  fixtures.test.ts
_dist_/: gridLayer.js  index.js  io.js  lru-store.js  ome.js  state.js  storage.js  theme.js  utils.js  vizarr.js
_snowpack/: env.js
assets/: LICENSE  blosc.55ec6bdf.js  gzip.1e85efe8.js  index.6a904341.js  index.de16bea0.js  lz4.46eda458.js  vendor.d370befd.js  zlib.9b262c0b.js  zstd.b8e7f151.js
binder/: environment.yml  postBuild
components/: LayerController.js  Menu.js  Viewer.js
example/: IDR_example.ipynb  README.md  VizarrDemo.imjoy.html  create_fixture.py  getting_started.ipynb  imjoy_example.ipynb  imjoy_plugin.py  mandelbrot.ipynb  requirements.txt
pages/: _app.js  index.js
patches/: @vivjs__loaders@0.17.2.patch
public/: index.html  manifest.json
python/: README.md  Untitled.ipynb  deno.json  pyproject.toml
python/notebooks/: IDR_example.ipynb  README.md  create_fixture.py  getting_started.ipynb  mandelbrot.ipynb  requirements.txt  spatial_transformations.ipynb
python/src/vizarr/: __init__.py  _version.py  _widget.js  _widget.py
python/tests/: test_widget.py
scripts/: fetch-fixtures.ts
src/: App.css  App.js  ZarrPixelSource.ts  empty-geotiff.js  empty:geotiff.js  gridLayer.ts  (+23 more)
(+355 files in other folders)
