[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizarr"
version = "0.1.1"
dependencies = ["anywidget>=0.9.13", "zarr<3"]
requires-python = ">=3.9"

[dependency-groups]
dev = ["watchfiles", "jupyterlab", "scikit-image"]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/vizarr"]
