[project]
name = "vizarr"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
  "anywidget>=0.9.13",
  "msgspec>=0.20.0",
  "zarr>=3",
]

[dependency-groups]
dev = [
  "jupyterlab>=4.5.5",
  "numba>=0.64.0",
  "obstore>=0.9.2",
  "pytest>=9.0.2",
  "ruff>=0.15.6",
  "scikit-image>=0.26.0",
  "ty>=0.0.23",
  "watchfiles>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
  "COM812",  # Missing trailing comma (conflicts with ruff format)
  "ISC001",  # Import sorting (conflicts with ruff format)
]
