[project]
name = "vizarr"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
  "anywidget>=0.9.13",
  "msgspec>=0.20.0",
  "zarr>=3",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.6",
  "ty>=0.0.23",
]
examples = [
  "jupyterlab>=4.5.6",
  "numba>=0.64.0",
  "obstore>=0.9.2",
  "scikit-image>=0.26.0",
  "watchfiles>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
  "COM812",  # Missing trailing comma (conflicts with ruff format)
  "ISC001",  # Import sorting (conflicts with ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "D",  # No docstrings in tests
  "S101",  # Use of assert
  "B018",  # "useless expression", for accessing the Foo._repr_mimbundle_ descriptor
  "SLF001",
  "PLC",
  "PLR",
  "FIX",
  "ANN201"
]

[tool.ty.src]
exclude = [
  "notebooks",
]
